rollback - slate theme not applying properly, opting for CSS customization

--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,9 @@ url: "https://akirapearl/github.io" # the base hostname & protocol for your site
 github_username:  Akirapearl
 
 # Build settings
-#theme: minima
-remote_theme: pages-themes/slate@v0.2.0
+theme: minima
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
