--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: My blog!
-email: draculaspot@hotmail.com
+email: 
 description: >- # this means to ignore newlines until "baseurl:"
   Blog created to document my journey during a 100 days of code challenge.
 baseurl: "/jekyll_blog" # the subpath of your site, e.g. /blog
