--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: My blog!
+title: 100 days of code
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
   Blog created to document my journey during a 100 days of code challenge.
