--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/jekyll_blog" # the subpath of your site, e.g. /blog
 url: "https://akirapearl/github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  Akirapearl
-
+future: true
 # Build settings
 theme: minima
 plugins:
